# iatoolkit

./: app.py  iatoolkit.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
companies/sample_company/: configuration.py  sample_company.py
companies/sample_fintech/: sample_fintech.py
docs/: companies_and_components.md  creating_a_new_company_implementation.md  database_guide.md  deployment_guide.md  index.md  installation_guide.md  programming_guide.md  quickstart.md
src/: app.py  iatoolkit.py
src/common/: auth.py  exceptions.py  routes.py  util.py
src/iatoolkit/: __init__.py  base_company.py  cli_commands.py  iatoolkit.py
src/infra/: call_service.py  gemini_adapter.py  llm_client.py  llm_proxy.py  mail_app.py  openai_adapter.py  redis_session_manager.py
src/repositories/: document_repo.py  document_type_repo.py  vs_repo.py
src/services/: api_service.py  benchmark_service.py  dispatcher_service.py  document_service.py  excel_service.py  load_documents_service.py  mail_service.py  prompt_manager_service.py  query_service.py  sql_service.py  tasks_service.py
src/system_prompts/: query_main.prompt
src/templates/: chat.html
src/views/: change_password_view.py  external_chat_login_view.py  file_store_view.py  forgot_password_view.py  home_view.py  signup_view.py  tasks_review_view.py  verify_user_view.py
tests/common/: test_auth.py  test_routes.py  test_session_manager.py  test_util.py
tests/infra/: test_call_service.py  test_gemini_adapter.py  test_llm_client.py  test_llm_proxy.py  test_mail_app.py  test_openai_adapter.py
(+132 files in other folders)
